<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <packaging>pom</packaging>

  <groupId>ca.bc.gov.nrs.wfnews</groupId>
  <artifactId>wfnews</artifactId>
  <version>1.0</version>
  <name>wfnews</name>
  <url>http://maven.apache.org</url>

  <properties>
    <java.version>21</java.version>
    <java-source-version>21</java-source-version>
    <java-target-version>21</java-target-version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.organization>bcgov-sonarcloud</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.sources>database,docker,lambda,terraform,client/wfnews-war/src/main/angular/src</sonar.sources>
    <log4j.version>2.24.3</log4j.version>
    <wfone.common.version>1.5.0</wfone.common.version>
    <swagger.version>2.2.20</swagger.version>
  </properties>
  
  <modules>
    <module>client</module>
    <module>server/wfnews-api</module>
    <module>server/wfone-notifications-api</module>
    <module>server/wfone-notification-push-api</module>
    <module>server/wfss-pointid-api</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j-impl</artifactId>
        <version>${log4j.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <!-- Spring 6 dropped LocalVariableTableParameterNameDiscoverer; without -parameters,
                 @RequestParam/@PathVariable/@QueryParam without an explicit value= silently break. -->
            <parameters>true</parameters>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
